# zozulya

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
crates/zozulya-db/: Cargo.toml
crates/zozulya-db/src/: lib.rs
crates/zozulya-ir/: Cargo.toml
crates/zozulya-ir/src/: cst.rs  input_file.rs  lib.rs  source_file.rs  symbol.rs
crates/zozulya-parse/: Cargo.toml
crates/zozulya-parse/src/: input.rs  lexer.rs  lib.rs  parser.rs  sink.rs  syntax.rs
crates/zozulya-parse/src/input/: classes.rs  cursor.rs
crates/zozulya-parse/src/lexer/: cursor.rs
crates/zozulya-parse/src/parser/: expr.rs  stmt.rs
src/: main.rs
tests/: hello_world
